# bmt-monorepo-python-template

./: .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  workspace.yaml
.claude/: rules.md  settings.json
.claude/commands/: README.md  agent-collect.md  agent-spawn.md  agent-status.md  commit.md  deploy.md  doc-generate.md  env-check.md  env-clean.md  env-fix.md  env-generate.md  env-sync.md  git-changelog.md  git-status.md  github-fix-actions.md  github-fix-issues.md  github-fix-pr.md  new-app.md  new-package.md  qa-fix.md  qa-test.md  review.md  scrum-backlog.md  scrum-burndown.md  scrum-dod.md  scrum-planning.md  scrum-refinement.md  scrum-retro.md  scrum-review.md  scrum-sprint.md  scrum-standup.md  sync.md  update-wiki.md  verify.md  zero-qa-check.md  zero-qa-gate.md  zero-qa.md
.claude/hooks/: check-sensitive-files.sh  post-tool-use.sh
.cursor/: README.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-docs-sync.yml  ai-issue-handler.yml  ai-pr-review.yml  ai-project-sync.yml  ci.yml  release.yml
.scrum/: README.md  backlog.json  config.json
.scrum/planning/: sprint-1-ai-automation-planning.md
.zero-qa/: README.md  config.json
apps/: README.md
docs/: README.md
infra/: README.md
infra/aws/: README.md
infra/docker/: Dockerfile  docker-compose.yml
infra/firebase/: README.md
infra/gcp/: README.md
infra/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
infra/k8s/overlays/development/: kustomization.yaml
infra/k8s/overlays/production/: kustomization.yaml
infra/k8s/overlays/staging/: kustomization.yaml
infra/vercel/: README.md  vercel.json
make/: aws.mk  build.mk  ci.mk  clean.mk  dev.mk  docker.mk  docs.mk  gcp.mk  git.mk  k8s.mk  quality.mk  release.mk  setup.mk  test.mk  utils.mk  vercel.mk
scripts/: setup.sh  validate.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_core.py  test_shared.py
tools/: README.md
wiki/: Architecture.md  Branching-Workflow.md  Getting-Started.md  Home.md
